# -SIMDCCONR01

./: .gitignore  .replit  Procfile  README.md  fix_db.py  fix_missing_options.py  guia_do_sistema.md  manage.py  nixpacks.toml  pyproject.toml  railway.json  replit.md  start.sh  test_groq_analysis.py  test_reset.py  test_smtp.py  validate_kb.py
accounts/: admin.py  api_urls.py  emails.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_user_lgpd_fields.py  0004_user_professional_fields.py  0005_alter_user_privacy_accepted_and_more.py
ai_analysis/: engine.py
attached_assets/: Pasted-Voc-um-agente-especialista-em-desenvolvimento-SaaS-B2B-_1764860046769.txt
audit/: admin.py  models.py
audit/migrations/: 0001_initial.py  0002_initial.py
automation/: tasks.py
billing/: admin.py  models.py  stripe_utils.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_initial.py  0003_paymentorder.py  (+1 more)
companies/: admin.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
employees/: admin.py  forms.py  models.py  urls.py  views.py
forms_builder/: admin.py  forms.py  models.py  urls.py  utils_emails.py  views.py
landing/: apps.py  forms.py  models.py  urls.py  views.py
reports/: admin.py  debug_views.py  engine_text.py  knowledge_base.py  models.py  urls.py  utils_charts.py  utils_pdf.py  views.py  views.py.fixed
saas_nr01/: asgi.py  email_backends.py  settings.py  urls.py  wsgi.py
support/: models.py  urls.py  views.py
templates/: base.html  landing.html
(+94 files in other folders)
